--- a/testebootstrap.html
+++ b/testebootstrap.html
@@ -13,7 +13,7 @@
 		<![endif]-->
 	</head>
 	<body>
-		<div class="container"></div>
+		<div class="container">
 			<h1>Hello, Bootstrap!</h1>
 		
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
