--- a/teste.html
+++ b/teste.html
@@ -3,13 +3,18 @@
 <head>
 <body onload="startTime()">
 
+<div class="container">
+<div class="col-md-8">
 <p>Gerador de sinal fictício</p>
 <div id="txt"></div>
 <p> </p>
+</div>
 
+<div class="col-md-4">
 <p>Sensor disparando periodicamente conforme o sinal</p>
 <img id="myImage" src="pic_bulboff.gif" width="100" height="180">
 <img id="myImage2" src="pic_bulbon.gif" width="100" height="180">
+</div>
 
 <script>
 function startTime() {
@@ -46,6 +51,6 @@ function changeImage() {
 </script>
 </head>
 
-
+</div>
 </body>
 </html>
