--- a/teste.html
+++ b/teste.html
@@ -4,13 +4,13 @@
 <body onload="startTime()">
 
 <div class="container">
-<div class="col-md-8">
+<div class="col-sm-8">
 <p>Gerador de sinal fictício</p>
 <div id="txt"></div>
 <p> </p>
 </div>
 
-<div class="col-md-4">
+<div class="col-sm-4">
 <p>Sensor disparando periodicamente conforme o sinal</p>
 <img id="myImage" src="pic_bulboff.gif" width="100" height="180">
 <img id="myImage2" src="pic_bulbon.gif" width="100" height="180">
