--- a/teste.html
+++ b/teste.html
@@ -5,7 +5,7 @@
 
 <div class="container">
 <div class="col-sm-8">
-<h1>Gerador de sinal fictício</h1>
+<p>Gerador de sinal fictício</p>
 <div id="txt"></div>
 <p> </p>
 </div>
