--- a/teste.html
+++ b/teste.html
@@ -4,6 +4,7 @@
 <body onload="startTime()">
 
 <div class="container">
+<div class="row">
 <div class="col-sm-8">
 <p>Gerador de sinal fictício</p>
 <div id="txt"></div>
@@ -50,7 +51,7 @@ function changeImage() {
 }
 </script>
 </head>
-
+</div>
 </div>
 </body>
 </html>
