--- a/teste.html
+++ b/teste.html
@@ -4,7 +4,7 @@
 </head>
 <body onload="startTime()">
 
-<div class="container" style="margin-top:50px>
+<div class="container" style="margin-top:50px">
 
 <h2 align="center">
 	<br>fazendo uns testes
