--- a/teste.html
+++ b/teste.html
@@ -12,7 +12,7 @@
 <div class="container" style="margin-top:50px">
 
 <h2 align="center">
-	<br>fazendo uns testes
+	<br>Fazendo uns testes
 </h2>
 
 <div class="row">
@@ -25,6 +25,8 @@
 <div class="col-sm-4">
 <p>Sensor disparando periodicamente conforme o sinal</p>
 <img id="myImage" src="pic_bulboff.gif" width="100" height="180">
+</div>
+<div class="col-sm-4">
 <img id="myImage2" src="pic_bulbon.gif" width="100" height="180">
 </div>
 
