--- a/teste.html
+++ b/teste.html
@@ -26,7 +26,15 @@
 <p>Sensor disparando periodicamente conforme o sinal</p>
 <img id="myImage" src="pic_bulboff.gif" width="100" height="180">
 </div>
-<div class="col-sm-8"></div>
+
+<div class="col-sm-8">
+	<div class="form-group">
+					<label for="valor">Valor:</label> <input type="number"
+						class="form-control" name="valor" ng-model="valor"
+						placeholder="informe o valor" required />
+	</div>
+</div>
+
 <div class="col-sm-4">
 <img id="myImage2" src="pic_bulbon.gif" width="100" height="180">
 </div>
