--- a/teste.html
+++ b/teste.html
@@ -27,14 +27,14 @@
 <img id="myImage" src="pic_bulboff.gif" width="100" height="180">
 </div>
 
-<div class="col-sm-8">
+<div class="col-sm-4">
 	<div class="form-group">
 					<label for="valor">Valor:</label> <input type="number"
 						class="form-control" name="valor" ng-model="valor"
 						placeholder="informe o valor" required />
 	</div>
 </div>
-
+<div class="col-sm-4"></div>
 <div class="col-sm-4">
 <img id="myImage2" src="pic_bulbon.gif" width="100" height="180">
 </div>
