--- a/teste.html
+++ b/teste.html
@@ -33,6 +33,8 @@
 						class="form-control" name="valor" ng-model="valor"
 						placeholder="informe o valor" required />
 	</div>
+	<button type="button" class="btn btn-primary" ng-click="SendData()">Enviar</button>
+		<p></p>
 </div>
 <div class="col-sm-4"></div>
 <div class="col-sm-4">
