--- a/teste.html
+++ b/teste.html
@@ -73,6 +73,10 @@ function changeImage() {
         image.src = "pic_bulboff.gif";
     }
 }
+function entrada(){
+	document.getElementById("valor").submit();
+}
+
 </script>
 
 </div>
