--- a/teste.html
+++ b/teste.html
@@ -75,6 +75,10 @@ function changeImage() {
 }
 function entrada(){
 	document.getElementById("valor").submit();
+	var oitudobem = document.getElementById("valor");
+	if(oitudobem == 1){
+		<p>oitudobem</p>
+	}
 }
 
 </script>
