--- a/teste.html
+++ b/teste.html
@@ -77,7 +77,7 @@ function entrada(){
 	document.getElementById("valor").submit();
 	var oitudobem = document.getElementById("valor");
 	if(oitudobem == 1){
-		<p>oitudobem</p>
+		changeImage()
 	}
 }
 
