--- a/teste.html
+++ b/teste.html
@@ -52,7 +52,7 @@ function startTime() {
     s;
     var t = setTimeout(startTime, 500);
     if(s % 5 == 0){
-    
+    changeImage()
   }  
 }
 function checkTime(i) {
